--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <body>
         <div class="hero">
         <h1>Metric/Imperial Unit Conversion</h1>
-        <input type="text" placeholder="0">
-        <button>Convert</button>
+        <input id="input" type="text" placeholder="0">
+        <button id="convert-btn">Convert</button>
     </div>
     <div class="main">
         <div class="section">
             <h3>Length (Meter/Feet)</h3>
-            <p>0 meters = 0.000 feet | 0 feet = 0.000 meters</p>
+            <p id="length-el">0 meters = 0.000 feet | 0 feet = 0.000 meters</p>
         </div>
     </div>
         <script src="index.js"></script>
